# ESP32_Music_moodlight

./: CMakeLists.txt  README.md  partitions.csv  pinout.md  sdkconfig.defaults
components/led_engine/: CMakeLists.txt  led_engine.c
components/led_engine/include/: led_engine.h
components/mic_engine/: CMakeLists.txt  idf_component.yml  mic_engine.c
components/mic_engine/include/: mic_engine.h
components/mode_manager/: CMakeLists.txt  mode_manager.c
components/mode_manager/include/: app_state.h  mode_manager.h
data/: app.css  app.js  index.html  style.css
docs/: bringup_validation.md  hardware_constraints.md
main/: CMakeLists.txt  idf_component.yml  main.c
